Fixed footer overflow causing trouble on mobile

--- a/css/trendmatch.scss
+++ b/css/trendmatch.scss
@@ -175,11 +175,17 @@ input[type="submit"]:hover {
     bottom: 0px;
 	opacity: 1;
 }
-/*------------------------- SITE WRAPPER ---------------------------*/
+/*------------------------- SITE WRAPPER / PAGE WRAPPER ---------------------------*/
 .site-wrapper {
 	min-height: 100vh;
     position: relative;
 	overflow: hidden;
+	background: $colorLight;
+}
+.page-wrapper {
+	background: white;
+	position: relative;
+	z-index: 0;
 }
 /*------------------------- BG SQUARE ---------------------------*/
 .bg-square {
@@ -304,6 +310,9 @@ section {
 	box-sizing: border-box;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	position: relative;
+	z-index: 9;
+	background: white;
 }
 .navbar-wrapper a.logo {
 	display: block;
@@ -415,17 +424,6 @@ footer {
 	}
 	.break {
 		visibility: hidden;
-	}
-	::after {
-		content: "";
-		display: block;
-		width: 100%;
-		top: 0;
-		left: 0;
-		height: 100vh;
-		background: #f4f4f4;
-		position: absolute;
-		z-index: -1;
 	}
 }
 
